# llamaindex-helloworld

./: .gitignore  README.md  pyproject.toml
src/llamaindex_helloworld/: ingestion.py  main.py
